@@ -1,3 +1,8 @@
+2005-03-08  Ross Burton  <ross@burtonini.com>
+
+	* src/config-parser.c:
+	Handle double property types.
+
 2005-02-03  Ross Burton  <ross@burtonini.com>
 
 	* src/devilspie-action-decorate.gob:
